# Copyright (c) 2022-2024, PostgreSQL Global Development Group

backend_sources += files(
  'bwtree.c',
  'bwtreeconsolidate.c',
  'bwtreedelta.c',
  'bwtreeepoch.c',
  'bwtreeinsert.c',
  'bwtreemap.c',
  'bwtreepage.c',
  'bwtreescan.c',
  'bwtreesearch.c',
  'bwtreesmo.c',
  'bwtreesort.c',
  'bwtreeutils.c',
  'bwtreevalidate.c',
)
